<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_about"
            android:icon="@drawable/about"
            android:title="@string/about" />
        <item
            android:id="@+id/nav_buy"
            android:icon="@drawable/buy"
            android:title="@string/buy" />
        <item
            android:id="@+id/nav_downloads"
            android:icon="@drawable/download"
            android:title="@string/downloads" />
        <item
            android:id="@+id/nav_history"
            android:icon="@drawable/history"
            android:title="@string/history" />
        <item
            android:id="@+id/nav_search"
            android:icon="@drawable/search"
            android:title="@string/search" />
    </group>

    <item android:title="@string/action_settings">
        <menu>
            <item
                android:id="@+id/nav_account"
                android:icon="@drawable/account"
                android:title="@string/account" />
            <item
                android:id="@+id/nav_signout"
                android:icon="@drawable/signout"
                android:title="@string/signout" />
        </menu>
    </item>

</menu>
