<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorWhite">

    <LinearLayout
        android:orientation="horizontal"
        android:weightSum="2"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:background="#930e0f"
        android:padding="10dp">

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:text="@string/account"
            android:textSize="20sp"
            android:textColor="#ffffff"
            android:paddingStart="10dp"
            android:paddingLeft="10dp"
            android:paddingEnd="10dp"
            android:paddingRight="10dp"
            android:paddingTop="12dp"
            android:layout_gravity="start"
            android:gravity="start"
            android:focusable="true"
            android:focusableInTouchMode="true" />

    </LinearLayout>


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingBottom="70dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#ffffff"
            android:orientation="vertical"
            android:padding="25dp">


            <EditText
                android:id="@+id/fnameField"
                android:layout_width="fill_parent"
                android:layout_height="40dp"
                android:background="#eeeeee"
                android:inputType="text"
                android:padding="5dp"
                android:hint="@string/fname"
                android:textColor="@color/colorDark"
                android:textColorHint="@color/colorGray"/>

            <EditText
                android:id="@+id/lnameField"
                android:layout_width="fill_parent"
                android:layout_height="40dp"
                android:background="#eeeeee"
                android:inputType="text"
                android:padding="5dp"
                android:layout_marginTop="15dp"
                android:hint="@string/lname"
                android:textColor="@color/colorDark"
                android:textColorHint="@color/colorGray"/>

            <EditText
                android:id="@+id/userField"
                android:layout_width="fill_parent"
                android:layout_height="40dp"
                android:background="#eeeeee"
                android:inputType="text"
                android:padding="5dp"
                android:layout_marginTop="15dp"
                android:hint="@string/username"
                android:textColor="@color/colorDark"
                android:textColorHint="@color/colorGray"/>

            <EditText
                android:id="@+id/phoneField"
                android:layout_width="fill_parent"
                android:layout_height="40dp"
                android:background="#eeeeee"
                android:inputType="phone"
                android:padding="5dp"
                android:layout_marginTop="15dp"
                android:hint="@string/phone"
                android:textColor="@color/colorDark"
                android:textColorHint="@color/colorGray"/>

            <EditText
                android:id="@+id/emailField"
                android:layout_width="fill_parent"
                android:layout_height="40dp"
                android:background="#eeeeee"
                android:inputType="textEmailAddress"
                android:padding="5dp"
                android:layout_marginTop="15dp"
                android:hint="@string/email"
                android:textColor="@color/colorDark"
                android:textColorHint="@color/colorGray"
                android:enabled="false"/>


            <EditText
                android:id="@+id/passField"
                android:layout_width="fill_parent"
                android:layout_height="40dp"
                android:background="#eeeeee"
                android:inputType="textPassword"
                android:padding="5dp"
                android:layout_marginTop="15dp"
                android:hint="@string/password"
                android:textColor="@color/colorDark"
                android:textColorHint="@color/colorGray"/>

            <EditText
                android:id="@+id/confirmField"
                android:layout_width="fill_parent"
                android:layout_height="40dp"
                android:background="#eeeeee"
                android:inputType="textPassword"
                android:padding="5dp"
                android:layout_marginTop="15dp"
                android:hint="@string/confirm"
                android:textColor="@color/colorDark"
                android:textColorHint="@color/colorGray"/>

            <TextView
                android:id="@+id/saveBtn"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:background="#930e0f"
                android:gravity="center"
                android:padding="10dp"
                android:text="@string/saveChanges"
                android:textColor="#ffffff"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/deleteBtn"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:background="@color/colorDark"
                android:gravity="center"
                android:padding="10dp"
                android:text="@string/deleteAccount"
                android:textColor="#ffffff"
                android:textSize="20sp" />

        </LinearLayout>

    </ScrollView>


</LinearLayout>