<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#930e0f">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#930e0f"
            android:orientation="vertical"
            android:paddingBottom="125dp"
            android:paddingTop="50dp"
            android:weightSum="1">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_gravity="center"
                android:layout_weight="0.5"
                android:contentDescription="@string/app_name"
                android:src="@drawable/logo" />

            <TextView
                android:id="@+id/logo"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_gravity="center"
                android:layout_marginTop="5dp"
                android:layout_weight="0.5"
                android:focusable="true"
                android:focusableInTouchMode="true"
                android:fontFamily="sans-serif-light"
                android:text="@string/app_name"
                android:textColor="#ffffff"
                android:textSize="35sp"
                android:textStyle="bold" />

        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="-100dp"
            android:orientation="vertical"
            android:paddingEnd="30dp"
            android:paddingLeft="30dp"
            android:paddingRight="30dp"
            android:paddingStart="30dp"
            android:paddingBottom="30dp"
            android:background="#ffffff">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#ffffff"
                android:orientation="vertical"
                android:padding="5dp">


                <TextView
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/signup"
                    android:textSize="25sp"
                    android:layout_marginTop="5dp"
                    android:layout_marginBottom="15dp"/>


                <EditText
                    android:id="@+id/fnameField"
                    android:layout_width="fill_parent"
                    android:layout_height="40dp"
                    android:background="#eeeeee"
                    android:inputType="text"
                    android:padding="5dp"
                    android:hint="@string/fname"/>

                <EditText
                    android:id="@+id/lnameField"
                    android:layout_width="fill_parent"
                    android:layout_height="40dp"
                    android:background="#eeeeee"
                    android:inputType="text"
                    android:padding="5dp"
                    android:layout_marginTop="15dp"
                    android:hint="@string/lname"/>

                <EditText
                    android:id="@+id/userField"
                    android:layout_width="fill_parent"
                    android:layout_height="40dp"
                    android:background="#eeeeee"
                    android:inputType="text"
                    android:padding="5dp"
                    android:layout_marginTop="15dp"
                    android:hint="@string/username"/>

                <EditText
                    android:id="@+id/phoneField"
                    android:layout_width="fill_parent"
                    android:layout_height="40dp"
                    android:background="#eeeeee"
                    android:inputType="phone"
                    android:padding="5dp"
                    android:layout_marginTop="15dp"
                    android:hint="@string/phone"/>

                <EditText
                    android:id="@+id/emailField"
                    android:layout_width="fill_parent"
                    android:layout_height="40dp"
                    android:background="#eeeeee"
                    android:inputType="textEmailAddress"
                    android:padding="5dp"
                    android:layout_marginTop="15dp"
                    android:hint="@string/email"/>


                <EditText
                    android:id="@+id/passField"
                    android:layout_width="fill_parent"
                    android:layout_height="40dp"
                    android:background="#eeeeee"
                    android:inputType="textPassword"
                    android:padding="5dp"
                    android:layout_marginTop="15dp"
                    android:hint="@string/password"/>

                <EditText
                    android:id="@+id/confirmField"
                    android:layout_width="fill_parent"
                    android:layout_height="40dp"
                    android:background="#eeeeee"
                    android:inputType="textPassword"
                    android:padding="5dp"
                    android:layout_marginTop="15dp"
                    android:hint="@string/confirm"/>

                <TextView
                    android:id="@+id/signupBtn"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:background="#930e0f"
                    android:gravity="center"
                    android:padding="10dp"
                    android:text="@string/signup"
                    android:textColor="#ffffff"
                    android:textSize="20sp" />

            </LinearLayout>

            <TextView
                android:id="@+id/loginBtn"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:background="#ffffff"
                android:gravity="center"
                android:padding="15dp"
                android:text="@string/login"
                android:textColor="#242424"
                android:textSize="18sp" />

        </LinearLayout>


    </LinearLayout>


</ScrollView>