<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorWhite">

    <LinearLayout
        android:orientation="horizontal"
        android:weightSum="2"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:background="#930e0f"
        android:padding="10dp">

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:text="@string/about"
            android:textSize="20sp"
            android:textColor="#ffffff"
            android:paddingStart="10dp"
            android:paddingLeft="10dp"
            android:paddingEnd="10dp"
            android:paddingRight="10dp"
            android:paddingTop="12dp"
            android:layout_gravity="start"
            android:gravity="start"
            android:focusable="true"
            android:focusableInTouchMode="true" />

    </LinearLayout>


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp"
        android:text="@string/lorem_ipsum"
        android:textColor="@color/colorDark"/>


    <android.support.v7.widget.CardView
        android:id="@+id/website"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorLightGrey"
        android:layout_margin="16dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/website"
            android:textColor="@color/colorDark"
            android:padding="16dp"/>

    </android.support.v7.widget.CardView>


    <android.support.v7.widget.CardView
        android:id="@+id/privacy"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorLightGrey"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginBottom="16dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/privacy"
            android:textColor="@color/colorDark"
            android:padding="16dp"/>

    </android.support.v7.widget.CardView>


    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorLightGrey"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginBottom="16dp">

        <TextView
            android:id="@+id/terms"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/terms"
            android:textColor="@color/colorDark"
            android:padding="16dp"/>

    </android.support.v7.widget.CardView>


</LinearLayout>