<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#930e0f">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:weightSum="1"
        android:paddingTop="50dp"
        android:background="#930e0f">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_weight="0.5"
            android:src="@drawable/logo"
            android:contentDescription="@string/app_name"
            android:layout_gravity="center"/>

        <TextView
            android:id="@+id/logo"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_weight="0.5"
            android:text="@string/app_name"
            android:layout_gravity="center"
            android:textColor="#ffffff"
            android:textSize="35sp"
            android:layout_marginTop="5dp"
            android:textStyle="bold"
            android:fontFamily="sans-serif-light"
            android:focusable="true"
            android:focusableInTouchMode="true"/>

    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="35dp"
        android:text="@string/success"
        android:gravity="center"
        android:textColor="#ffffff"
        android:textSize="25sp"
        android:padding="5dp"/>


    <TextView
        android:id="@+id/toEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/verification"
        android:textColor="#ffffff"
        android:textSize="20sp"
        android:padding="5dp"/>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="2"
        android:padding="10dp">


        <TextView
            android:id="@+id/resendEmailBtn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimary"
            android:gravity="center"
            android:padding="15dp"
            android:text="@string/resend"
            android:textColor="#ffffff"
            android:textSize="18sp"
            android:layout_weight="1"
            android:layout_margin="5dp"/>


        <TextView
            android:id="@+id/loginBtn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@color/colorPrimary"
            android:gravity="center"
            android:padding="15dp"
            android:text="@string/login"
            android:textColor="#ffffff"
            android:textSize="18sp"
            android:layout_margin="5dp"/>



    </LinearLayout>







</LinearLayout>