<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="10dp">

        <TextView
            android:id="@+id/name"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:textSize="22sp"
            android:textColor="#000000"/>

        <TextView
            android:id="@+id/location"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:textColor="#424242"
            android:layout_marginTop="5dp"/>

        <TextView
            android:id="@+id/updated"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="end"
            android:textColor="#424242"/>


        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/summary"
            android:layout_marginTop="10dp"
            android:textColor="#000000"
            android:textSize="20sp"/>

        <TextView
            android:id="@+id/summary"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:textColor="#000000"
            android:layout_marginTop="10dp"/>


        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/experience"
            android:layout_marginTop="20dp"
            android:textColor="#000000"
            android:textSize="20sp"/>

        <TextView
            android:id="@+id/experiences"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:textColor="#000000"
            android:layout_marginTop="10dp"/>



        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/education"
            android:layout_marginTop="20dp"
            android:textColor="#000000"
            android:textSize="20sp"/>

        <TextView
            android:id="@+id/education"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:textColor="#000000"
            android:layout_marginTop="10dp"/>




        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/skills"
            android:layout_marginTop="20dp"
            android:textColor="#000000"
            android:textSize="20sp"/>

        <TextView
            android:id="@+id/skills"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:textColor="#000000"
            android:layout_marginTop="10dp"/>



        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/other"
            android:layout_marginTop="20dp"
            android:textColor="#000000"
            android:textSize="20sp"/>

        <TextView
            android:id="@+id/other"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:textColor="#000000"
            android:layout_marginTop="10dp"/>



    </LinearLayout>

</ScrollView>